--- a/app/views/canvas/index.fbml.erb
+++ b/app/views/canvas/index.fbml.erb
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="http://web1.tunnlr.com:10172/stylesheets/styles.css?a=6" type="text/css" />
+<link rel="stylesheet" href="http://web1.tunnlr.com:10172/stylesheets/styles.css?a=7" type="text/css" />
 
 <div id="container">
   <div id="header">    
@@ -7,11 +7,11 @@
   
   <script>
     function ajax_plain_text(target_element) {
-      Ajax.Update(target_element, 'RAW', '/ajax/server_time_raw');
+      Ajax.Update(target_element, 'RAW', '/ajax/server_time_raw', {begin: function(){start()}, complete:function(){end()}});
     }
 
     function ajax_fbml(target_element) {
-      Ajax.Update(target_element, 'FBML', '/ajax/server_time_fbml');
+      Ajax.Update(target_element, 'FBML', '/ajax/server_time_fbml', {begin: function(){start()}, complete:function(){end()}});
     }
 
     function ajax_json(target_element) {
@@ -20,14 +20,24 @@
         success:
           function(result){
             $(target_element).setInnerFBML(result.fbml_time)
-          }
+          },
+          begin: function(){start()}, complete:function(){end()}
       });
     }
+
+    var timer = 0;
+    function start() {
+      timer = new Date().getTime();
+    }
+    function end() {
+      $('timer').setTextValue("Timer: "+ (new Date().getTime() - timer));
+    }
   </script>
-
-
+  
   <div id="content">    
     <h2>FB Ajax without local proxy</h2>
+    <div style="float:left" id="timer"/>
+    
 
     <h3>Raw Text Ajax Response</h3>
 
