--- a/app/views/canvas/index.fbml.erb
+++ b/app/views/canvas/index.fbml.erb
@@ -32,6 +32,7 @@
     function end() {
       $('timer').setTextValue("Timer: "+ (new Date().getTime() - timer));
     }
+    useLocal = true;
   </script>
   
   <div id="content">    
