--- a/app/views/canvas/index.fbml.erb
+++ b/app/views/canvas/index.fbml.erb
@@ -121,9 +121,9 @@ end
     <div class="result" id="json"></div>
     <input type="button" onclick="ajax_json('json')" value="Execute"/>
 
-        <h3>Json Ajax Response</h3>
+        <h3>FBML JSON With LocalProxy Support:</h3>
 
-    <h4>FBML JSON With LocalProxy Support:</h4>
+    <h4>Javascript:</h4>
     <pre><code>
 function ajax_json_localproxy(target_element) {
   Ajax.Load('JSON', '/ajax/server_time_json',
